// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Item /> should render as a button when no href, but a click handler is passed to the props 1`] = `
<MoreMenuItem
  className={null}
  href={null}
  label="Item Label"
  onClick={[Function]}
  testId={null}
>
  <button
    className="css-1hj8a57"
    data-test-id={null}
    onClick={[Function]}
    type="button"
  >
    <Translate
      className={null}
      params={Object {}}
      role={null}
      string="Item Label"
      transform={null}
    >
      <span
        className={null}
        role={null}
      >
        Item Label
      </span>
    </Translate>
  </button>
</MoreMenuItem>
`;

exports[`<Item /> should render as a link when an href is passed to the props 1`] = `
<MoreMenuItem
  className={null}
  href="/some/link"
  label="Item Label"
  onClick={null}
  testId={null}
>
  <Link
    className="css-1hj8a57"
    href="/some/link"
  >
    <div>
      <Translate
        className={null}
        params={Object {}}
        role={null}
        string="Item Label"
        transform={null}
      >
        <span
          className={null}
          role={null}
        >
          Item Label
        </span>
      </Translate>
    </div>
  </Link>
</MoreMenuItem>
`;
